--- a/RepositoryParser/RepositoryParser/Resources/AppStyles.xaml
+++ b/RepositoryParser/RepositoryParser/Resources/AppStyles.xaml
@@ -30,7 +30,7 @@
     </Style>
 
     <Style x:Key="AnalysisContentProviderTitleTextBlock" TargetType="TextBlock">
-        <Setter Property="Foreground" Value="{StaticResource Graphite}"/>
+        <Setter Property="Foreground" Value="Black"/>
         <Setter Property="FontWeight" Value="Light"/>
         <Setter Property="FontSize" Value="16"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
@@ -77,6 +77,22 @@
         <Setter Property="Opacity" Value="1"/>
     </Style>
 
-    
+    <LinearGradientBrush x:Key="HorizontalShadowBorder" StartPoint="0 0" EndPoint="1 0">
+        <LinearGradientBrush.GradientStops>
+            <GradientStop Color="Transparent" Offset="0" />
+            <GradientStop Color="#1a472a" Offset="0.35" />
+            <GradientStop Color="#1a472a" Offset="0.65" />
+            <GradientStop Color="Transparent" Offset="1" />
+        </LinearGradientBrush.GradientStops>
+    </LinearGradientBrush>
+
+    <LinearGradientBrush x:Key="VerticalShadowBorder" StartPoint="0 0" EndPoint="0 1">
+        <LinearGradientBrush.GradientStops>
+            <GradientStop Color="Transparent" Offset="0" />
+            <GradientStop Color="#1a472a" Offset="0.35" />
+            <GradientStop Color="#1a472a" Offset="0.65" />
+            <GradientStop Color="Transparent" Offset="1" />
+        </LinearGradientBrush.GradientStops>
+    </LinearGradientBrush>
 
 </ResourceDictionary>
