listview and datagird styles

--- a/RepositoryParser/RepositoryParser.Controls/Controls.xaml
+++ b/RepositoryParser/RepositoryParser.Controls/Controls.xaml
@@ -3,6 +3,7 @@
                     xmlns:local="clr-namespace:RepositoryParser.Controls">
     
     <ResourceDictionary.MergedDictionaries>
-        
+        <ResourceDictionary Source="Styles/ListViewStyles.xaml" />
+        <ResourceDictionary Source="Styles/DataGridStyles.xaml"/>
     </ResourceDictionary.MergedDictionaries>
 </ResourceDictionary>
