--- a/RepositoryParser/RepositoryParser/App.xaml
+++ b/RepositoryParser/RepositoryParser/App.xaml
@@ -1,32 +1,25 @@
-<Application x:Class="RepositoryParser.App" 
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
-             xmlns:local="clr-namespace:RepositoryParser" StartupUri="View/MainWindow.xaml" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             d1p1:Ignorable="d" 
-             xmlns:d1p1="http://schemas.openxmlformats.org/markup-compatibility/2006">
+<Application x:Class="RepositoryParser.App" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:local="clr-namespace:RepositoryParser" StartupUri="View/MainWindow.xaml" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" d1p1:Ignorable="d" xmlns:d1p1="http://schemas.openxmlformats.org/markup-compatibility/2006">
   <Application.Resources>
     <ResourceDictionary>
       <vm:ViewModelLocator x:Key="Locator" d:IsDataSource="True" xmlns:vm="clr-namespace:RepositoryParser.ViewModel" />
-            <ResourceDictionary.MergedDictionaries>
-                <!--RepositoryParser.Controls Lib-->
-                <ResourceDictionary Source="pack://application:,,,/RepositoryParser.Controls;component/Controls.xaml"/>
-                <!--Internal Libraries-->
-                <ResourceDictionary Source="Resources/Themes/Brushes.xaml"/>
-                <ResourceDictionary Source="Resources/Themes/Colors.xaml"/>
-                <ResourceDictionary Source="../Resources/ButtonStyles.xaml"/>
-                <ResourceDictionary Source="../Resources/AppStyles.xaml"/>
-                <!-- MahApps.Metro resource dictionaries. Make sure that all file names are Case Sensitive! -->
-                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml" />
-                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Fonts.xaml" />
-                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Colors.xaml" />
-                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.AnimatedTabControl.xaml" />
-                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.AnimatedSingleRowTabControl.xaml" />
-                <!-- Accent and AppTheme setting -->
-                <ResourceDictionary Source="../Resources/Themes/CustomTheme.xaml"/>
-                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/BaseLight.xaml" />
-
-            </ResourceDictionary.MergedDictionaries>
-        </ResourceDictionary>
+      <ResourceDictionary.MergedDictionaries>
+        <!--RepositoryParser.Controls Lib-->
+        <ResourceDictionary Source="pack://application:,,,/RepositoryParser.Controls;component/Controls.xaml" />
+        <!--Internal Libraries-->
+        <ResourceDictionary Source="Resources/Themes/Brushes.xaml" />
+        <ResourceDictionary Source="Resources/Themes/Colors.xaml" />
+        <ResourceDictionary Source="../Resources/ButtonStyles.xaml" />
+        <ResourceDictionary Source="../Resources/AppStyles.xaml" />
+        <!-- MahApps.Metro resource dictionaries. Make sure that all file names are Case Sensitive! -->
+        <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml" />
+        <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Fonts.xaml" />
+        <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Colors.xaml" />
+        <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.AnimatedTabControl.xaml" />
+        <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.AnimatedSingleRowTabControl.xaml" />
+        <!-- Accent and AppTheme setting -->
+        <ResourceDictionary Source="../Resources/Themes/CustomTheme.xaml" />
+        <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/BaseLight.xaml" />
+      </ResourceDictionary.MergedDictionaries>
+    </ResourceDictionary>
   </Application.Resources>
 </Application>
